lib/src/parser/parser.cpp
#include <CFG/cfg.hpp>
#include <common/errorlogger.hpp>
#include <parser/parser.hpp>
#include <iostream>

namespace Crust {

void Parser::skipToNextSemiColon() {
    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::SEMI_COLON) {
        mCurrentToken = mLexer.getNextToken();
    }
}

Lexer::Token Parser::peekNextToken() {
    Lexer lexer_copy = mLexer;
    return lexer_copy.getNextToken();
}

std::unique_ptr<CFGNode> Parser::parseProgram(const std::string& filename) {
    //    Check the extension?
    if (!mLexer.init(filename)) {
        ErrorLogger::printError(ErrorLogger::ErrorType::ERROR_OPENING_FILE);
        return nullptr;
    }

    mCurrentToken = mLexer.getNextToken();
    return parseProgramDecl();
}

std::unique_ptr<ProgDecl> Parser::parseProgramDecl() {
    auto progDecl = std::make_unique<ProgDecl>();
    auto declListNode = std::make_unique<DeclList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::KW_FN and (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and (mCurrentToken != Lexer::Token::LBRACKET)) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    switch (mCurrentToken) {
        case Lexer::Token::TOK_EOF:
            break;
        case Lexer::Token::KW_FN:
        case Lexer::Token::KW_INT_32... Lexer::Token::KW_VOID:
        case Lexer::Token::LBRACKET:

            declListNode.reset(parseDeclList().release());
            progDecl.reset(new ProgDecl(std::move(declListNode)));

            break;

        default:
            ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
            break;
    }

    return progDecl;
}

std::unique_ptr<DeclList> Parser::parseDeclList() {
    auto declListNode = std::make_unique<DeclList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::KW_FN and (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and (mCurrentToken != Lexer::Token::LBRACKET)) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    auto declNode = std::make_unique<Decl>();
    auto declList = std::make_unique<DeclList>();

    switch (mCurrentToken) {
        case Lexer::Token::TOK_EOF:
            break;

        case Lexer::Token::KW_FN:
        case Lexer::Token::KW_INT_32... Lexer::Token::KW_VOID:
        case Lexer::Token::LBRACKET:

            declNode.reset(parseDecl().release());
            declList.reset(parseDeclList().release());

            declListNode.reset(new DeclList(std::move(declNode), std::move(declList)));
            break;

        default:
            ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
            break;
    }

    return declListNode;
}

std::unique_ptr<Decl> Parser::parseDecl() {
    auto declNode = std::make_unique<Decl>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::KW_FN and (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and (mCurrentToken != Lexer::Token::LBRACKET)) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_FN) {
        std::unique_ptr<Crust::FnDecl> fnDecl = parseFnDecl();
        declNode.reset(new Decl(std::move(fnDecl)));
    } else if (mCurrentToken == Lexer::Token::LBRACKET or (mCurrentToken >= Lexer::Token::KW_INT_32 and mCurrentToken <= Lexer::Token::KW_VOID)) {
        std::unique_ptr<Crust::VarDecl> varDecl = parseVarDecl();
        std::unique_ptr<Crust::Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

        declNode.reset(
            new Decl(
                std::move(varDecl),
                std::move(semi_colon)));
    }

    return declNode;
}

std::unique_ptr<VarDecl> Parser::parseVarDecl() {
    auto varDeclNode = std::make_unique<VarDecl>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and (mCurrentToken != Lexer::Token::LBRACKET)) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::EXPECTED_DECL, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LBRACKET or (mCurrentToken >= Lexer::Token::KW_INT_32 and mCurrentToken <= Lexer::Token::KW_VOID)) {
        std::unique_ptr<Crust::Type> type = parseType();
        std::unique_ptr<Crust::AtomicDeclList> atomicDeclList = parseAtomicDeclList();
        varDeclNode.reset(new VarDecl(std::move(type),
                                      std::move(atomicDeclList)));
    }

    return varDeclNode;
}

std::unique_ptr<AtomicDeclList> Parser::parseAtomicDeclList() {
    auto atomicDeclListNode = std::make_unique<AtomicDeclList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::IDENTIFIER and mCurrentToken != Lexer::Token::SEMI_COLON) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::MISSING_SEMI_COLON, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<AtomicDecl> atomicDecl = parseAtomicDecl();
        std::unique_ptr<Token> comma = parseToken(Lexer::Token::COMMA);
        std::unique_ptr<AtomicDeclList> atomicDeclList = parseAtomicDeclList();

        atomicDeclListNode.reset(new AtomicDeclList(
            std::move(atomicDecl),
            std::move(comma),
            std::move(atomicDeclList)));
    } else if (mCurrentToken == Lexer::Token::SEMI_COLON) {
        // Do nothing
    }

    return atomicDeclListNode;
}

std::unique_ptr<AtomicDecl> Parser::parseAtomicDecl() {
    auto atomicDeclNode = std::make_unique<AtomicDecl>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and mCurrentToken != Lexer::Token::IDENTIFIER) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<Token> identifier = parseToken(Lexer::Token::IDENTIFIER);
        std::unique_ptr<Token> assign = parseToken(Lexer::Token::ASSIGN);
        std::unique_ptr<Expression> expression = parseExpression();

        atomicDeclNode.reset(new AtomicDecl(
            std::move(identifier),
            std::move(assign),
            std::move(expression)));
    }

    return atomicDeclNode;
}

std::unique_ptr<FnDecl> Parser::parseFnDecl() {
    auto fnDeclNode = std::make_unique<FnDecl>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::KW_FN) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_FN) {
        std::unique_ptr<Token> kw_fn = parseToken(Lexer::Token::KW_FN);
        std::unique_ptr<Token> id = parseToken(Lexer::Token::IDENTIFIER);
        std::unique_ptr<Token> lparen = parseToken(Lexer::Token::LPAREN);
        std::unique_ptr<ArgList> argList = parseArgList();
        std::unique_ptr<Token> rparen = parseToken(Lexer::Token::RPAREN);
        std::unique_ptr<Type> type = parseType();
        std::unique_ptr<Token> lbrace = parseToken(Lexer::Token::LBRACE);
        std::unique_ptr<StmtList> stmtList = parseStmtList();
        std::unique_ptr<Token> rbrace = parseToken(Lexer::Token::RBRACE);

        fnDeclNode.reset(new FnDecl(
            std::move(kw_fn),
            std::move(id),
            std::move(lparen),
            std::move(argList),
            std::move(rparen),
            std::move(type),
            std::move(lbrace),
            std::move(stmtList),
            std::move(rbrace)));
    }

    return fnDeclNode;
}

std::unique_ptr<ArgList> Parser::parseArgList() {
    auto argListNode = std::make_unique<ArgList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and
           mCurrentToken != Lexer::Token::LBRACKET and
           mCurrentToken != Lexer::Token::RPAREN) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LBRACKET or
        (mCurrentToken >= Lexer::Token::KW_INT_32 and mCurrentToken <= Lexer::Token::KW_VOID)) {
        std::unique_ptr<Type> type = parseType();
        std::unique_ptr<Token> id = parseToken(Lexer::Token::IDENTIFIER);
        std::unique_ptr<Token> comma = parseToken(Lexer::Token::COMMA);
        std::unique_ptr<ArgList> argList = parseArgList();

        argListNode.reset(new ArgList(
            std::move(type),
            std::move(id),
            std::move(comma),
            std::move(argList)));
    } else if (mCurrentToken == Lexer::Token::RPAREN) {
        // epslion do nothing
    }

    return argListNode;
}

std::unique_ptr<Expression> Parser::parseExpression() {
    auto expressionNode = std::make_unique<Expression>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::LPAREN and
           (mCurrentToken < Lexer::Token::INT_LITERAL and mCurrentToken > Lexer::Token::STR_LITERAL) and
           (mCurrentToken < Lexer::Token::KW_TRUE and mCurrentToken > Lexer::Token::KW_FALSE) and
           mCurrentToken != Lexer::Token::IDENTIFIER) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LPAREN or
        (mCurrentToken >= Lexer::Token::INT_LITERAL and mCurrentToken <= Lexer::Token::STR_LITERAL) or
        (mCurrentToken >= Lexer::Token::KW_TRUE and mCurrentToken <= Lexer::Token::KW_FALSE) or
        mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<Term> term = parseTerm();
        std::unique_ptr<ExpressionRHS> expressionRHS = parseExpressionRHS();

        expressionNode.reset(
            new Expression(
                std::move(term),
                std::move(expressionRHS)));
    }

    return expressionNode;
}

std::unique_ptr<ExpressionRHS> Parser::parseExpressionRHS() {
    auto expressionRHSNode = std::make_unique<ExpressionRHS>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           (mCurrentToken < Lexer::Token::OP_PLUS and mCurrentToken > Lexer::Token::OP_LT) and
           mCurrentToken != Lexer::Token::SEMI_COLON and
           mCurrentToken != Lexer::Token::COMMA and
           mCurrentToken != Lexer::Token::RPAREN and
           mCurrentToken != Lexer::Token::LBRACE) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken >= Lexer::Token::OP_PLUS and mCurrentToken <= Lexer::Token::OP_LT) {
        std::unique_ptr<Token> bin_op = parseToken(mCurrentToken);
        std::unique_ptr<Expression> expression = parseExpression();

        expressionRHSNode.reset(new ExpressionRHS(
            std::move(bin_op),
            std::move(expression)));
    } else if (mCurrentToken == Lexer::Token::SEMI_COLON or
               mCurrentToken == Lexer::Token::COMMA or
               mCurrentToken == Lexer::Token::RPAREN or
               mCurrentToken == Lexer::Token::LBRACE) {
        // epsilon do nothing
    }

    return expressionRHSNode;
}

std::unique_ptr<Term> Parser::parseTerm() {
    auto termNode = std::make_unique<Term>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::LPAREN and
           (mCurrentToken < Lexer::Token::INT_LITERAL and mCurrentToken > Lexer::Token::STR_LITERAL) and
           (mCurrentToken < Lexer::Token::KW_TRUE and mCurrentToken > Lexer::Token::KW_FALSE) and
           mCurrentToken != Lexer::Token::IDENTIFIER) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LPAREN) {
        std::unique_ptr<Token> lparen = parseToken(Lexer::Token::LPAREN);
        std::unique_ptr<Expression> expression = parseExpression();
        std::unique_ptr<Token> rparen = parseToken(Lexer::Token::RPAREN);

        termNode.reset(new Term(
            std::move(lparen),
            std::move(expression),
            std::move(rparen)));
    } else if (
        mCurrentToken == Lexer::Token::INT_LITERAL or
        mCurrentToken == Lexer::Token::FLOAT_LITERAL or
        mCurrentToken == Lexer::Token::STR_LITERAL or
        mCurrentToken == Lexer::Token::KW_TRUE or
        mCurrentToken == Lexer::Token::KW_FALSE) {
        std::unique_ptr<Token> literal = parseToken(mCurrentToken);

        termNode.reset(new Term(std::move(literal)));
    } else if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<IdOrCallTerm> idOrCallTerm = parseIdOrCallTerm();

        termNode.reset(new Term(
            std::move(idOrCallTerm)));
    }

    return termNode;
}

std::unique_ptr<IdOrCallTerm> Parser::parseIdOrCallTerm() {
    auto idOrCallTermNode = std::make_unique<IdOrCallTerm>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::IDENTIFIER) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<Token> identifier = parseToken(Lexer::Token::IDENTIFIER);
        std::unique_ptr<Call> call = parseCall();

        idOrCallTermNode.reset(new IdOrCallTerm(
            std::move(identifier),
            std::move(call)));
    }

    return idOrCallTermNode;
}

std::unique_ptr<Call> Parser::parseCall() {
    auto callNode = std::make_unique<Call>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::LPAREN and
           (mCurrentToken < Lexer::Token::OP_PLUS and mCurrentToken > Lexer::Token::OP_LT) and
           mCurrentToken != Lexer::Token::COMMA and
           mCurrentToken != Lexer::Token::RPAREN and
           mCurrentToken != Lexer::Token::SEMI_COLON and mCurrentToken != Lexer::Token::LBRACE) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LPAREN) {
        std::unique_ptr<Token> lparen = parseToken(Lexer::Token::LPAREN);
        std::unique_ptr<FormalArgList> formalArgList = parseFormalArgList();
        std::unique_ptr<Token> rparen = parseToken(Lexer::Token::RPAREN);

        callNode.reset(new Call(
            std::move(lparen),
            std::move(formalArgList),
            std::move(rparen)));
    } else if ((mCurrentToken >= Lexer::Token::OP_PLUS and mCurrentToken <= Lexer::Token::OP_LT) or
               mCurrentToken == Lexer::Token::COMMA or
               mCurrentToken == Lexer::Token::RPAREN or
               mCurrentToken == Lexer::Token::SEMI_COLON or
               mCurrentToken == Lexer::Token::LBRACE) {
        // epsilon do nothing
    }

    return callNode;
}

std::unique_ptr<FormalArgList> Parser::parseFormalArgList() {
    auto formalArgListNode = std::make_unique<FormalArgList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::LPAREN and
           (mCurrentToken < Lexer::Token::INT_LITERAL and mCurrentToken > Lexer::Token::STR_LITERAL) and
           (mCurrentToken < Lexer::Token::KW_TRUE and mCurrentToken > Lexer::Token::KW_FALSE) and
           mCurrentToken != Lexer::Token::IDENTIFIER and
           mCurrentToken != Lexer::Token::RPAREN) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LPAREN or
        (mCurrentToken >= Lexer::Token::INT_LITERAL and mCurrentToken <= Lexer::Token::STR_LITERAL) or
        (mCurrentToken >= Lexer::Token::KW_TRUE and mCurrentToken <= Lexer::Token::KW_FALSE) or
        mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<Expression> expression = parseExpression();
        std::unique_ptr<Token> comma = parseToken(Lexer::Token::COMMA);
        std::unique_ptr<FormalArgList> formalArgList = parseFormalArgList();

        formalArgListNode.reset(new FormalArgList(
            std::move(expression),
            std::move(comma),
            std::move(formalArgList)));
    } else if (mCurrentToken == Lexer::Token::RPAREN) {
        // epsilon do nothing
    }

    return formalArgListNode;
}

std::unique_ptr<StmtList> Parser::parseStmtList() {
    auto stmtListNode = std::make_unique<StmtList>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::LBRACE and
           (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and
           mCurrentToken != Lexer::Token::LBRACKET and
           mCurrentToken != Lexer::Token::IDENTIFIER and
           mCurrentToken != Lexer::Token::KW_RETURN and
           mCurrentToken != Lexer::Token::LPAREN and
           mCurrentToken != Lexer::Token::INT_LITERAL and
           mCurrentToken != Lexer::Token::FLOAT_LITERAL and
           mCurrentToken != Lexer::Token::STR_LITERAL and
           mCurrentToken != Lexer::Token::KW_TRUE and
           mCurrentToken != Lexer::Token::KW_FALSE and
           mCurrentToken != Lexer::Token::KW_IF and
           mCurrentToken != Lexer::Token::KW_FOR and
           mCurrentToken != Lexer::Token::KW_WHILE and
           mCurrentToken != Lexer::Token::RBRACE) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::LBRACE or
        (mCurrentToken >= Lexer::Token::KW_INT_32 and mCurrentToken <= Lexer::Token::KW_VOID) or
        mCurrentToken == Lexer::Token::LBRACKET or
        mCurrentToken == Lexer::Token::IDENTIFIER or
        mCurrentToken == Lexer::Token::KW_RETURN or
        mCurrentToken == Lexer::Token::LPAREN or
        mCurrentToken == Lexer::Token::INT_LITERAL or
        mCurrentToken == Lexer::Token::FLOAT_LITERAL or
        mCurrentToken == Lexer::Token::STR_LITERAL or
        mCurrentToken == Lexer::Token::KW_TRUE or
        mCurrentToken == Lexer::Token::KW_FALSE or
        mCurrentToken == Lexer::Token::KW_IF or
        mCurrentToken == Lexer::Token::KW_FOR or
        mCurrentToken == Lexer::Token::KW_WHILE) {
        std::unique_ptr<Stmt> stmt = parseStmt();
        std::unique_ptr<StmtList> stmtList = parseStmtList();

        stmtListNode.reset(new StmtList(
            std::move(stmt),
            std::move(stmtList)));
    }

    else if (mCurrentToken == Lexer::Token::RBRACE) {
        // do nothing
    }

    return stmtListNode;
}

std::unique_ptr<Stmt> Parser::parseStmt() {
    auto stmtNode = std::make_unique<Stmt>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           (mCurrentToken < Lexer::Token::KW_INT_32 and mCurrentToken > Lexer::Token::KW_VOID) and
           mCurrentToken != Lexer::Token::LBRACKET and
           mCurrentToken != Lexer::Token::IDENTIFIER and
           mCurrentToken != Lexer::Token::KW_IF and
           mCurrentToken != Lexer::Token::KW_FOR and
           mCurrentToken != Lexer::Token::KW_WHILE and
           mCurrentToken != Lexer::Token::KW_RETURN and
           mCurrentToken != Lexer::Token::LPAREN and
           mCurrentToken != Lexer::Token::INT_LITERAL and
           mCurrentToken != Lexer::Token::FLOAT_LITERAL and
           mCurrentToken != Lexer::Token::STR_LITERAL and
           mCurrentToken != Lexer::Token::KW_TRUE and
           mCurrentToken != Lexer::Token::KW_FALSE and
           mCurrentToken != Lexer::Token::LBRACE) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if ((mCurrentToken >= Lexer::Token::KW_INT_32 and mCurrentToken <= Lexer::Token::KW_VOID) or
        mCurrentToken == Lexer::Token::LBRACKET) {
        std::unique_ptr<VarDecl> vardecl = parseVarDecl();
        std::unique_ptr<Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

        stmtNode.reset(new Stmt(
            std::move(vardecl),
            std::move(semi_colon)));
    }

    else if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        if (peekNextToken() == Lexer::Token::ASSIGN) {
            std::unique_ptr<AssignmentStmt> assignment_stmt = parseAssignmentStmt();
            std::unique_ptr<Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

            stmtNode.reset(new Stmt(std::move(assignment_stmt), std::move(semi_colon)));
        } else {
            std::unique_ptr<Expression> expression = parseExpression();
            std::unique_ptr<Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

            stmtNode.reset(new Stmt(std::move(expression), std::move(semi_colon)));
        }
    }

    else if (mCurrentToken == Lexer::Token::KW_IF) {
        std::unique_ptr<ConditionalStmt> condn = parseConditionalStmt();

        stmtNode.reset(new Stmt(
            std::move(condn)));
    }

    else if (mCurrentToken == Lexer::Token::KW_FOR or
             mCurrentToken == Lexer::Token::KW_WHILE) {
        std::unique_ptr<LoopStmt> loop = parseLoopStmt();
        stmtNode.reset(new Stmt(
            std::move(loop)));
    }

    else if (mCurrentToken == Lexer::Token::KW_RETURN) {
        std::unique_ptr<ReturnStmt> returnStmt = parseReturnStmt();
        std::unique_ptr<Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

        stmtNode.reset(new Stmt(
            std::move(returnStmt), std::move(semi_colon)));
    }

    else if (mCurrentToken == Lexer::Token::LPAREN or
             mCurrentToken == Lexer::Token::INT_LITERAL or
             mCurrentToken == Lexer::Token::FLOAT_LITERAL or
             mCurrentToken == Lexer::Token::STR_LITERAL or
             mCurrentToken == Lexer::Token::KW_TRUE or
             mCurrentToken == Lexer::Token::KW_FALSE) {
        std::unique_ptr<Expression> exp = parseExpression();
        std::unique_ptr<Token> semi_colon = parseToken(Lexer::Token::SEMI_COLON);

        stmtNode.reset(new Stmt(
            std::move(exp), std::move(semi_colon)));
    } else if (mCurrentToken == Lexer::Token::LBRACE) {
        std::unique_ptr<Token> lbrace = parseToken(Lexer::Token::LBRACE);
        std::unique_ptr<StmtList> stmtList = parseStmtList();
        std::unique_ptr<Token> rbrace = parseToken(Lexer::Token::RBRACE);

        stmtNode.reset(new Stmt(
            std::move(lbrace),
            std::move(stmtList),
            std::move(rbrace)));
    }

    return stmtNode;
}

std::unique_ptr<AssignmentStmt> Parser::parseAssignmentStmt() {
    auto assignmentStmtNode = std::make_unique<AssignmentStmt>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::IDENTIFIER) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::IDENTIFIER) {
        std::unique_ptr<Token> id = parseToken(Lexer::Token::IDENTIFIER);
        std::unique_ptr<Token> assign = parseToken(Lexer::Token::ASSIGN);
        std::unique_ptr<Expression> expression = parseExpression();

        assignmentStmtNode.reset(new AssignmentStmt(
            std::move(id),
            std::move(assign),
            std::move(expression)));
    }

    return assignmentStmtNode;
}

std::unique_ptr<ConditionalStmt> Parser::parseConditionalStmt() {
    auto conditionalStmtNode = std::make_unique<ConditionalStmt>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::KW_IF) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_IF) {
        std::unique_ptr<IfBlock> ifBlock = parseIfBlock();
        std::unique_ptr<ElifBlocks> elifBlocks = parseElifBlocks();
        std::unique_ptr<ElseBlock> elseBlock = parseElseBlock();

        conditionalStmtNode.reset(new ConditionalStmt(
            std::move(ifBlock),
            std::move(elifBlocks),
            std::move(elseBlock)));
    }

    return conditionalStmtNode;
}

std::unique_ptr<LoopStmt> Parser::parseLoopStmt() {
    auto loopStmtNode = std::make_unique<LoopStmt>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::KW_FOR and
           mCurrentToken != Lexer::Token::KW_WHILE) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_FOR) {
        std::unique_ptr<ForLoop> forLoop = parseForLoop();

        loopStmtNode.reset(new LoopStmt(
            std::move(forLoop)));
    } else if (mCurrentToken == Lexer::Token::KW_WHILE) {
        std::unique_ptr<WhileLoop> whileLoop = parseWhileLoop();

        loopStmtNode.reset(new LoopStmt(
            std::move(whileLoop)));
    }

    return loopStmtNode;
}

std::unique_ptr<ReturnStmt> Parser::parseReturnStmt() {
    auto returnStmtNode = std::make_unique<ReturnStmt>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::KW_RETURN) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_RETURN) {
        std::unique_ptr<Token> kw_return = parseToken(Lexer::Token::KW_RETURN);
        std::unique_ptr<ReturnVar> returnVar = parseReturnVar();

        returnStmtNode.reset(new ReturnStmt(
            std::move(kw_return),
            std::move(returnVar)));
    }

    return returnStmtNode;
}

std::unique_ptr<IfBlock> Parser::parseIfBlock() {
    auto ifBlockNode = std::make_unique<IfBlock>();

    while (mCurrentToken != Lexer::Token::TOK_EOF and
           mCurrentToken != Lexer::Token::KW_IF) {
        ErrorLogger::printErrorAtLocation(ErrorLogger::ErrorType::VAR_MISSING_IDENTIFIER, mLexer.GetCurrentLocation());
        mCurrentToken = mLexer.getNextToken();
    }

    if (mCurrentToken == Lexer::Token::KW_IF) {
        std::unique_ptr<Token> kw_if = parseToken(Lexer::Token::KW_IF);
        std::unique_ptr<Expression> exp = parseExpression();
        std::unique_ptr<Token> lbrace = parseToken(Lexer::Token::LBRACE);
        std::unique_ptr<StmtList> stmtList = parseStmtList();
        std::unique_ptr<Token> rbrace = parseToken(Lexer::Token::RBRACE);

        ifBlockNode.reset(new IfBlock(
            std::move(kw_if),
            std::move(exp),
            std::move(lbrace),
            std::move(stmtList),
            std::move(rbrace)));
    }

    return ifBlockNode;
}
